Second list alignment fixed

--- a/Pages/dashboard/style.css
+++ b/Pages/dashboard/style.css
@@ -13,17 +13,13 @@
     background-color: var(--backgroung);
     
 }
-.body-invisible
-{
-    opacity: 0.1;
-}
 header
 {
     width: 100%;
     height: 7%;
     left: 0;
     top: 0;
-    border-bottom: 0.1px solid white;
+    border-bottom: 0.1px solid grey;
     position: fixed;
     display: flex;
     align-items: center;
@@ -116,7 +112,7 @@ header
     width: 60px;
 
 }
-.msg-btn-active
+.btn-active
 {
     background-color: var(--fb_blue);
     color: blue;
@@ -141,11 +137,11 @@ header
 {
     position: absolute;
     display: flex;
-    text-align: center;
+    align-items: center;
     justify-content: right;
     height: 100%;
     width: 100%;
-    bottom: -21%;
+    margin:0;
 }
 .second-list ul li
 {
@@ -715,7 +711,7 @@ button
 {
     cursor: pointer;
 }
-.messesges
+.hidden
 {
     width: 20%;
     height: 95%;
@@ -725,7 +721,6 @@ button
     position: fixed;
     background-color: var(--header_color);
     box-shadow: 0px 8px 8px 8px var(--backgroung);
-
     visibility: hidden;
 }
 .messesges::-webkit-scrollbar
@@ -767,6 +762,22 @@ button
     display: flex;
     margin: 3%;
     font-size: 30px;
+}
+.msg_nav .more
+{
+    position:absolute;
+    top: 10%;
+    right: 10%;
+    height: 100%;
+    background-color: transparent;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    
+}
+.msg_nav .more:hover
+{
+    background-color: var(--backgroung);   
 }
 .msg_search
 {
@@ -905,6 +916,14 @@ button
     bottom: auto;
     right: 5%;
 }
+.notif-visible
+{
+    visibility: visible;   
+}
+
+
+
+
 .right-side
 {
     position: fixed;
